# jepa-world-model-tutorial

./: AGENTS.md  README.md  mkdocs.yml  prek.toml  pyproject.toml  ruff.toml  setup.py  ty.toml
.github/workflows/: pages.yml
docs/: index.md  references.md
docs/assets/: katex.js
docs/chapter-01/: introduction.md  jepa-objective.md  representation-geometry.md  ssl-landscape.md  why-not-pixels.md
docs/chapter-02/: consolidation.md  context-target-masks.md  ema-target-encoder.md  evaluation-knn-minimal-probe.md  first-experiment.md  image-patchification.md  implementation-overview.md  jepa-predictor.md  losses-and-diagnostics.md  minimal-vit-encoder.md  positional-embeddings.md  project-setup.md  training-loop.md
docs/chapter-03/: configuration-for-jepa-experiments.md  metrics-diagnostics-and-logging-cadence.md  research-grade-jepa-training.md  run-state-and-experiment-manifests.md
