[project]
name = "jepa-world-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "marimo>=0.23.6",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.6",
    "pymdown-extensions>=10.21.3",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "tensorboard>=2.20.0",
    "ty>=0.0.38",
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocs-glightbox>=0.5.2",
]
